--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,9 @@
   Logged in as <%= current_user.email %>.
   <%= link_to "Log Out", logout_path %>
 <% else %>
-  <%= link_to "Sign Up", signup_path %> or 
+  <%= link_to "Sign Up", signup_path %> or
   <%= link_to "Log In", login_path %> <br/>
-  <%= link_to "Sign in with Google", "/auth/google_oauth2" %>
+  <%= link_to "Sign in with Google", "/auth/google_oauth2", method: :post %>
 
 <% end %>
 <p id=”notice”><%= notice %></p>
